feat: :sparkles: added code to all htmls
did the almost all of the code for all the htmls now begining debugging

none found

--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<header>
-<h1></h1>
-</header>
+<header class="header">
+    <section class="links">
+        <img src="img/acme.png">
+        <nav class="navegation">
+            <ul>
+               <li>inicio</li>
+               <li>Servicios</li>
+               <li>¿Quienes somos?</li>
+               <li>contacto</li>
+            </ul>
+        </nav> 
+
+    </section>
+
+
 <body>
-    
+    <img src="img/map.png">
+    <h3>Donde encontrarnos:</h3>
+    <img src="img/house.png">
+    <b>712 Av. Green Stone Sprintfield</b>
+    <img src="img/email.png">
+    <b>info@acme.tech</b>
+    <img src="img/phone.png">
+    <b>(+001) 555 8965</b>
+    <img src="img/instagram.png">
+    <b>@acmetech</b>
 </body>
-<root>
-    
-</root>
 </html>
