--- a/index.html
+++ b/index.html
@@ -5,13 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<header>
-<h1></h1>
+<header class="header">
+    <section class="links">
+        <img src="img/acme.png">
+        <nav class="navegation">
+            <ul>
+               <li>inicio</li>
+               <li>Servicios</li>
+               <li>¿Quienes somos?</li>
+               <li>contacto</li>
+            </ul>
+        </nav> 
+
+    </section>
+
+
 </header>
 <body>
-    
+    <p>la mejor tecnologia</p>
+    <img src="">
 </body>
 <root>
-
+<a>Conectando el mundo con las mejores tecnologias para impactar compañias vanguardistas.</a>
 </root>
 </html>
