--- a/service.html
+++ b/service.html
@@ -5,11 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<header>
-<h1></h1>
-</header>
+<header class="header">
+    <section class="links">
+        <img src="img/acme.png">
+        <nav class="navegation">
+            <ul>
+               <li>inicio</li>
+               <li>Servicios</li>
+               <li>¿Quienes somos?</li>
+               <li>contacto</li>
+            </ul>
+        </nav> 
+
+    </section>
+
+
 <body>
-    
+    <img class="sertitle" src="">
+    <h2 class="sertitle">IA GENERATIVA</h2>
+    <a class="sertitle">Utiliza el poder de la IA generativa para crear contenido digitalde alta calidad que ayuden a impulsar tu compañia a través del marketing digital.</a>
+    <img class="sertitle" src="">
+    <h2 class="sertitle">CIENCIA DE DATOS</h2>
+    <a class="sertitle">Los datos generados en tu compañia te ayudaran a ver de una forma mas clara que pasos a seguir. La ciencia de datos te ayudara a la toma de desiciones mediante proyecciones y otras herramientas.</a>
+    <img class="sertitle" src="">
+    <h2 class="sertitle">Software como Servicio</h2>
+    <a class="sertitle">Poseemos una gran variedad de herramientas digitales que le ayudaran a gestionar su compañia. Apoyamos sus procesos con nuestras plataformas digitales.</a>
 </body>
 <root>
     
