--- a/weare.html
+++ b/weare.html
@@ -5,11 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<header>
-<h1></h1>
-</header>
+<header class="header">
+    <section class="links">
+        <img src="img/acme.png">
+        <nav class="navegation">
+            <ul>
+               <li>inicio</li>
+               <li>Servicios</li>
+               <li>¿Quienes somos?</li>
+               <li>contacto</li>
+            </ul>
+        </nav> 
+
+    </section>
+
+
 <body>
-    
+    <img src="img/target.png">
+    <h3>Misión</h3>
+    <c>Potenciar el éxito de las compañias mediante soluciones tecnologicas innovadoras que transforman ideas en impacto, impulsando el crecimiento acelerado de estas.</c>
+    <h3>Visión</h3>
+    <c>Nos vemos como lideres en la vangurdia de la innovacion tecnologica, siendo reconocidos por nuestra dedicacion a impulsar el exito empresarial y el cambio social. Aspiramos a ser la primera opción para compañias que buscan soluciones tecnologicas de alto impacto, demostrando que la tecnologia puede ser una fuerza poderosa para el bien.</c>
+    <img src="img/eye.png">
 </body>
 <root>
     
