feat: :sparkles: added code
still debugging

none found

--- a/contact.html
+++ b/contact.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>contacto</title>
 </head>
 <header class="header">
     <section class="links">
-        <img src="img/acme.png">
+        <img class="acme" src="img/acme.png">
         <nav class="navegation">
             <ul>
-               <li>inicio</li>
-               <li>Servicios</li>
-               <li>¿Quienes somos?</li>
-               <li>contacto</li>
+                <li onclick="href='index.html'">inicio</li>
+                <li onclick="href='service.html'">Servicios</li>
+                <li href="weare.html">¿Quienes somos?</li>
+                <li href="contact.html">contacto</li>
             </ul>
         </nav> 
 
@@ -21,15 +22,17 @@
 
 
 <body>
-    <img src="img/map.png">
+    <form class="bodycon">
+    <img class="map" src="img/map.png">
     <h3>Donde encontrarnos:</h3>
-    <img src="img/house.png">
+    <img class="foto3" src="img/house.png">
     <b>712 Av. Green Stone Sprintfield</b>
-    <img src="img/email.png">
+    <img class="foto3" src="img/email.png">
     <b>info@acme.tech</b>
-    <img src="img/phone.png">
+    <img class="foto3" src="img/phone.png">
     <b>(+001) 555 8965</b>
-    <img src="img/instagram.png">
+    <img class="foto3" src="img/instagram.png">
     <b>@acmetech</b>
+    </form>
 </body>
 </html>
