--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>index</title>
 </head>
 <header class="header">
     <section class="links">
-        <img src="img/acme.png">
+        <img class="acme" src="img/acme.png">
         <nav class="navegation">
             <ul>
-               <li>inicio</li>
-               <li>Servicios</li>
-               <li>¿Quienes somos?</li>
-               <li>contacto</li>
+                <li onclick="href='index.html'">inicio</li>
+                <li onclick="href='service.html'">Servicios</li>
+                <li onclick="href='weare.html'">¿Quienes somos?</li>
+                <li onclick="href='contact.html'">contacto</li>
             </ul>
         </nav> 
 
