--- a/weare.html
+++ b/weare.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>weare</title>
 </head>
 <header class="header">
     <section class="links">
-        <img src="img/acme.png">
+        <img class="acme" src="img/acme.png">
         <nav class="navegation">
             <ul>
-               <li>inicio</li>
-               <li>Servicios</li>
-               <li>¿Quienes somos?</li>
-               <li>contacto</li>
+               <li href="index.html">inicio</li>
+               <li href="service.html">Servicios</li>
+               <li href="weare.html">¿Quienes somos?</li>
+               <li href="contact.html">contacto</li>
             </ul>
         </nav> 
 
