feat: :sparkles: added remaning images
added images to their respective folder

none found

--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
             <ul>
                 <li onclick="href='index.html'">inicio</li>
                 <li onclick="href='service.html'">Servicios</li>
-                <li href="weare.html">¿Quienes somos?</li>
-                <li href="contact.html">contacto</li>
+                <li onclick="href='weare.html'">¿Quienes somos?</li>
+                <li onclick="href='contact.html'">contacto</li>
             </ul>
         </nav> 
 
