--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </header>
 <body>
     <p>la mejor tecnologia</p>
-    <img src="">
+    <img src="img/brain.jpeg">
 </body>
 <root>
 <a>Conectando el mundo con las mejores tecnologias para impactar compañias vanguardistas.</a>
