--- a/service.html
+++ b/service.html
@@ -11,10 +11,10 @@
         <img class="acme" src="img/acme.png">
         <nav class="navegation">
             <ul>
-                <li href="index.html">inicio</li>
-                <li href="service.html">Servicios</li>
-                <li href="weare.html">¿Quienes somos?</li>
-                <li href="contact.html">contacto</li>
+                <li onclick="href='index.html'">inicio</li>
+                <li onclick="href='service.html'">Servicios</li>
+                <li onclick="href='weare.html'">¿Quienes somos?</li>
+                <li onclick="href='contact.html'">contacto</li>
             </ul>
         </nav> 
 
@@ -22,13 +22,13 @@
 
 
 <body>
-    <img class="sertitle" src="">
+    <img class="sertitle" src="img/learn.jpeg">
     <h2 class="sertitle">IA GENERATIVA</h2>
     <a class="sertitle">Utiliza el poder de la IA generativa para crear contenido digitalde alta calidad que ayuden a impulsar tu compañia a través del marketing digital.</a>
-    <img class="sertitle" src="">
+    <img class="sertitle" src="img/known.jpeg">
     <h2 class="sertitle">CIENCIA DE DATOS</h2>
     <a class="sertitle">Los datos generados en tu compañia te ayudaran a ver de una forma mas clara que pasos a seguir. La ciencia de datos te ayudara a la toma de desiciones mediante proyecciones y otras herramientas.</a>
-    <img class="sertitle" src="">
+    <img class="sertitle" src="img/serv.jpeg">
     <h2 class="sertitle">Software como Servicio</h2>
     <a class="sertitle">Poseemos una gran variedad de herramientas digitales que le ayudaran a gestionar su compañia. Apoyamos sus procesos con nuestras plataformas digitales.</a>
 </body>
