--- a/weare.html
+++ b/weare.html
@@ -11,10 +11,10 @@
         <img class="acme" src="img/acme.png">
         <nav class="navegation">
             <ul>
-               <li href="index.html">inicio</li>
-               <li href="service.html">Servicios</li>
-               <li href="weare.html">¿Quienes somos?</li>
-               <li href="contact.html">contacto</li>
+                <li onclick="href='index.html'">inicio</li>
+                <li onclick="href='service.html'">Servicios</li>
+                <li onclick="href='weare.html'">¿Quienes somos?</li>
+                <li onclick="href='contact.html'">contacto</li>
             </ul>
         </nav> 
 
