feat: :sparkles: alined a bunch of stuff
idk

--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,9 @@
 <header class="header">
     <section class="links">
         <img class="acme" src="img/acme.png">
-        <nav class="navegation">
+        <nav>
             <ul>
-                <li onclick="href='index.html'">inicio</li>
+                <li onclick="href='index.html'">inicio</li> 
                 <li onclick="href='service.html'">Servicios</li>
                 <li onclick="href='weare.html'">¿Quienes somos?</li>
                 <li onclick="href='contact.html'">contacto</li>
