--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>index</title>
 </head>
 <header class="header">
+    <div>
     <section class="links">
         <img class="acme" src="img/acme.png">
-        <nav class="navegation">
+        <nav>
             <ul>
                 <li onclick="href='index.html'">inicio</li>
                 <li onclick="href='service.html'">Servicios</li>
@@ -19,14 +20,18 @@
         </nav> 
 
     </section>
-
+    </div>
 
 </header>
 <body>
+    <div>
     <p>la mejor tecnologia</p>
     <img src="img/brain.jpeg">
+    </div>
 </body>
 <root>
+<div>
 <a>Conectando el mundo con las mejores tecnologias para impactar compañias vanguardistas.</a>
+</div>
 </root>
 </html>
