--- a/service.html
+++ b/service.html
@@ -9,7 +9,7 @@
 <header class="header">
     <section class="links">
         <img class="acme" src="img/acme.png">
-        <nav class="navegation">
+        <nav>
             <ul>
                 <li onclick="href='index.html'">inicio</li>
                 <li onclick="href='service.html'">Servicios</li>
@@ -22,15 +22,21 @@
 
 
 <body>
-    <img class="sertitle" src="img/learn.jpeg">
-    <h2 class="sertitle">IA GENERATIVA</h2>
-    <a class="sertitle">Utiliza el poder de la IA generativa para crear contenido digitalde alta calidad que ayuden a impulsar tu compañia a través del marketing digital.</a>
-    <img class="sertitle" src="img/known.jpeg">
-    <h2 class="sertitle">CIENCIA DE DATOS</h2>
-    <a class="sertitle">Los datos generados en tu compañia te ayudaran a ver de una forma mas clara que pasos a seguir. La ciencia de datos te ayudara a la toma de desiciones mediante proyecciones y otras herramientas.</a>
-    <img class="sertitle" src="img/serv.jpeg">
-    <h2 class="sertitle">Software como Servicio</h2>
-    <a class="sertitle">Poseemos una gran variedad de herramientas digitales que le ayudaran a gestionar su compañia. Apoyamos sus procesos con nuestras plataformas digitales.</a>
+    <div class="sertitle">
+    <img src="img/learn.jpeg">
+    <h2>IA GENERATIVA</h2>
+    <a>Utiliza el poder de la IA generativa para crear contenido digitalde alta calidad que ayuden a impulsar tu compañia a través del marketing digital.</a>
+    </div>
+    <div class="sertitle">
+    <img src="img/known.jpeg">
+    <h2>CIENCIA DE DATOS</h2>
+    <a>Los datos generados en tu compañia te ayudaran a ver de una forma mas clara que pasos a seguir. La ciencia de datos te ayudara a la toma de desiciones mediante proyecciones y otras herramientas.</a>
+    </div>
+    <div class="sertitle">
+    <img src="img/serv.jpeg">
+    <h2>Software como Servicio</h2>
+    <a>Poseemos una gran variedad de herramientas digitales que le ayudaran a gestionar su compañia. Apoyamos sus procesos con nuestras plataformas digitales.</a>
+    </div>    
 </body>
 <root>
     
