--- a/weare.html
+++ b/weare.html
@@ -9,7 +9,7 @@
 <header class="header">
     <section class="links">
         <img class="acme" src="img/acme.png">
-        <nav class="navegation">
+        <nav>
             <ul>
                 <li onclick="href='index.html'">inicio</li>
                 <li onclick="href='service.html'">Servicios</li>
